# data-transformation-python

./: .gitignore  CLEANUP_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  README.md  pyproject.toml
config/: environments.yml.example  profiles.yml.example  sources.yml.example
docs/: CDC_RETIREMENT_PATTERN.md  DBT_CDC_IMPLEMENTATION.md  DBT_VS_FRAMEWORK_COMPARISON.md  LARGE_SCALE_CDC.md  PERFORMANCE_OPTIMIZATIONS.md  REF_AND_SOURCE.md  RUST_OPTIMIZATIONS.md
sql/models/: schema.yml.example
sql/models/bronze/: README.md  example_cdc.sql.example  example_report.sql.example  example_with_source.sql.example  new_rfb.sql
sql/models/gold/: README.md  example_incremental.sql.example
sql/models/silver/: README.md  example_temp.sql.example  example_with_ref.sql.example
sql/tests/: README.md
src/framework/: __init__.py  backfill.py  cdc_polars.py  cli.py  config.py  connection.py  dependency.py  executor.py  macros.py  materialization.py  model.py  parser.py  plan.py  polars_utils.py  state.py  testing.py  watcher.py
src/utils/: __init__.py  errors.py  lineage.py  logger.py
tests/: __init__.py  test_dependency.py  test_parser.py  test_state.py
